SUNRPC: RPC level errors should set task->tk_rpc_status (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56987,6 +56987,7 @@
 	patches.suse/i2c-imx-Make-sure-to-unregister-adapter-on-remove.patch
 	patches.suse/ftrace-Fix-NULL-pointer-dereference-in-is_ftrace_trampoline-when-ftrace-is-dead.patch
 	patches.suse/tracing-probes-Have-kprobes-and-uprobes-use-COMM-too.patch
+	patches.suse/SUNRPC-RPC-level-errors-should-set-task-tk_rpc_statu.patch
 	patches.suse/af_key-Do-not-call-xfrm_probe_algs-in-parallel.patch
 	patches.suse/ratelimit-Fix-data-races-in-___ratelimit.patch
 	patches.suse/netfilter-nf_tables-disallow-binding-to-already-boun.patch
