--- a/series.conf
+++ b/series.conf
@@ -54921,6 +54921,7 @@
 	patches.suse/KVM-s390-Return-error-on-SIDA-memop-on-normal-guest.patch
 	patches.suse/NFSD-Fix-the-behavior-of-READ-near-OFFSET_MAX.patch
 	patches.suse/NFSD-Clamp-WRITE-offsets.patch
+	patches.suse/NFSD-Fix-offset-type-in-I-O-trace-points.patch
 	patches.suse/tipc-improve-size-validations-for-received-domain-re.patch
 	patches.suse/ixgbevf-Require-large-buffers-for-build_skb-on-82599.patch
 	patches.suse/netfilter-conntrack-don-t-refresh-sctp-entries-in-cl.patch
