--- a/series.conf
+++ b/series.conf
@@ -53892,6 +53892,7 @@
 	patches.suse/dmaengine-dmaengine_desc_callback_valid-Check-for-ca.patch
 	patches.suse/ACPI-PMIC-Fix-intel_pmic_regs_handler-read-accesses.patch
 	patches.suse/thermal-Fix-NULL-pointer-dereferences-in-of_thermal_.patch
+	patches.suse/SUNRPC-Partial-revert-of-commit-6f9f17287e78.patch
 	patches.suse/NFS-Don-t-set-NFS_INO_DATA_INVAL_DEFER-and-NFS_INO_I.patch
 	patches.suse/pnfs-flexfiles-Fix-misplaced-barrier-in-nfs4_ff_layo.patch
 	patches.suse/NFS-Fix-deadlocks-in-nfs_scan_commit_list.patch
