--- a/series.conf
+++ b/series.conf
@@ -56864,6 +56864,7 @@
 	patches.suse/scsi-qla2xxx-Update-version-to-10.02.07.800-k.patch
 	patches.suse/scsi-sg-Allow-waiting-for-commands-to-complete-on-removed-device.patch
 	patches.suse/md-unlock-mddev-before-reap-sync_thread-in-action_st.patch
+	patches.suse/md-raid10-fix-KASAN-warning.patch
 	patches.suse/jbd2-fix-outstanding-credits-assert-in-jbd2_journal_.patch
 	patches.suse/ext4-recover-csum-seed-of-tmp_inode-after-migrating-.patch
 	patches.suse/ext4-check-if-directory-block-is-within-i_size.patch
