--- a/series.conf
+++ b/series.conf
@@ -49047,6 +49047,7 @@
 	patches.suse/isofs-release-buffer-head-before-return.patch
 	patches.suse/ceph-fix-flush_snap-logic-after-putting-caps.patch
 	patches.suse/nfsd-register-pernet-ops-last-unregister-first.patch
+	patches.suse/svcrdma-Hold-private-mutex-while-invoking-rdma_accep.patch
 	patches.suse/clocksource-drivers-ixp4xx-Select-TIMER_OF-when-need.patch
 	patches.suse/clocksource-drivers-mxs_timer-Add-missing-semicolon-.patch
 	patches.suse/ARM-9046-1-decompressor-Do-not-clear-SCTLR.nTLSMD-for-ARMv7-cores.patch
