SUNRPC: Don't leak sockets in xs_local_connect() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55860,6 +55860,7 @@
 	patches.suse/KVM-s390-vsie-gmap-reduce-gmap_rmap-overhead
 	patches.suse/kvm-x86-cpuid-Only-provide-CPUID-leaf-0xA-if-host-ha.patch
 	patches.suse/NFSv4-Don-t-invalidate-inode-attributes-on-delegatio.patch
+	patches.suse/SUNRPC-Don-t-leak-sockets-in-xs_local_connect.patch
 	patches.suse/SUNRPC-Ensure-gss-proxy-connects-on-setup.patch
 	patches.suse/Revert-SUNRPC-attempt-AF_LOCAL-connect-on-setup.patch
 	patches.suse/s390-dasd-fix-data-corruption-for-ESE-devices
