--- a/series.conf
+++ b/series.conf
@@ -56941,6 +56941,7 @@
 	patches.suse/pinctrl-qcom-msm8916-Allow-CAMSS-GP-clocks-to-be-mux.patch
 	patches.suse/pinctrl-sunxi-Add-I-O-bias-setting-for-H6-R-PIO.patch
 	patches.suse/NFSv4.1-Don-t-decrease-the-value-of-seq_nr_highest_s.patch
+	patches.suse/NFSv4.1-Handle-NFS4ERR_DELAY-replies-to-OP_SEQUENCE-.patch
 	patches.suse/ceph-don-t-leak-snap_rwsem-in-handle_cap_grant.patch
 	patches.suse/ceph-don-t-truncate-file-in-atomic_open.patch
 	patches.suse/ACPI-property-Return-type-of-acpi_add_nondev_subnode.patch
