--- a/series.conf
+++ b/series.conf
@@ -12597,6 +12597,7 @@
 	patches.suse/KVM-LAPIC-Drop-pending-LAPIC-timer-injection-when-ca.patch
 	patches.suse/platform-chrome-cros_ec-fix-error-handling-in-cros_e.patch
 	patches.suse/platform-chrome-Re-introduce-cros_ec_cmd_xfer-and-us.patch
+	patches.suse/NFSD-Clean-up-the-show_nf_flags-macro.patch
 	patches.suse/nfsd-Fix-null-ptr-deref-in-nfsd_fill_super.patch
 	patches.suse/nfsd-destroy-percpu-stats-counters-after-reply-cache.patch
 	patches.suse/NFSD-Fix-possible-sleep-during-nfsd4_release_lockown.patch
