SUNRPC: RPC level errors should set task->tk_rpc_status (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14253,6 +14253,7 @@
 	patches.suse/tracing-probes-Have-kprobes-and-uprobes-use-COMM-too.patch
 	patches.suse/tracing-Have-filter-accept-common_cpu-to-be-consistent.patch
 	patches.suse/NFSv4.2-fix-problems-with-__nfs42_ssc_open.patch
+	patches.suse/SUNRPC-RPC-level-errors-should-set-task-tk_rpc_statu.patch
 	patches.suse/audit-fix-potential-double-free-on-error-path-from-f.patch
 	patches.suse/rose-check-NULL-rose_loopback_neigh-loopback.patch
 	patches.suse/r8152-fix-the-units-of-some-registers-for-RTL8156A.patch
