--- a/series.conf
+++ b/series.conf
@@ -14430,6 +14430,7 @@
 	patches.suse/s390-boot-fix-absolute-zero-lowcore-corruption-on-boot
 	patches.suse/docs-i2c-i2c-topology-fix-incorrect-heading.patch
 	patches.suse/kbuild-disable-header-exports-for-UML-in-a-straightf.patch
+	patches.suse/NFSv4-Turn-off-open-by-filehandle-and-NFS-re-export-.patch
 	patches.suse/of-fdt-fix-off-by-one-error-in-unflatten_dt_nodes.patch
 	patches.suse/of-device-Fix-up-of_dma_configure_id-stub.patch
 	patches.suse/drm-amdgpu-move-nbio-ih_doorbell_range-into-ih-code-.patch
