--- a/series.conf
+++ b/series.conf
@@ -14218,6 +14218,7 @@
 	patches.suse/xen-xenbus-fix-return-type-in-xenbus_file_read.patch
 	patches.suse/regulator-pca9450-Remove-restrictions-for-regulator-.patch
 	patches.suse/spi-meson-spicc-add-local-pow2-clock-ops-to-preserve.patch
+	patches.suse/net-sunrpc-fix-potential-memory-leaks-in-rpc_sysfs_x.patch
 	patches.suse/net_sched-cls_route-disallow-handle-of-0.patch
 	patches.suse/drm-i915-gt-Skip-TLB-invalidations-once-wedged.patch
 	patches.suse/drm-nouveau-recognise-GA103.patch
