NFSv4.2: Update mode bits after ALLOCATE and DEALLOCATE (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14431,6 +14431,7 @@
 	patches.suse/docs-i2c-i2c-topology-fix-incorrect-heading.patch
 	patches.suse/kbuild-disable-header-exports-for-UML-in-a-straightf.patch
 	patches.suse/NFSv4-Turn-off-open-by-filehandle-and-NFS-re-export-.patch
+	patches.suse/NFSv4.2-Update-mode-bits-after-ALLOCATE-and-DEALLOCA.patch
 	patches.suse/of-fdt-fix-off-by-one-error-in-unflatten_dt_nodes.patch
 	patches.suse/of-device-Fix-up-of_dma_configure_id-stub.patch
 	patches.suse/drm-amdgpu-move-nbio-ih_doorbell_range-into-ih-code-.patch
