--- a/series.conf
+++ b/series.conf
@@ -14142,6 +14142,7 @@
 	patches.suse/fs-add-mode_strip_sgid-helper.patch
 	patches.suse/fs-Add-missing-umask-strip-in-vfs_tmpfile.patch
 	patches.suse/fs-move-S_ISGID-stripping-into-the-vfs_-helpers.patch
+	patches.suse/nfsd-eliminate-the-NFSD_FILE_BREAK_-flags.patch
 	patches.suse/Revert-scripts-mod-modpost.c-permit-.cranges-secton-.patch
 	patches.suse/kbuild-dummy-tools-avoid-tmpdir-leak-in-dummy-gcc.patch
 	patches.suse/apparmor-fix-absroot-causing-audited-secids-to-begin.patch
