SUNRPC: Don't call connect() more than once on a TCP socket (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11321,6 +11321,7 @@
 	patches.suse/SUNRPC-remove-scheduling-boost-for-SWAPPER-tasks.patch
 	patches.suse/SUNRPC-improve-swap-handling-scheduling-and-PF_MEMAL.patch
 	patches.suse/0001-SUNRPC-change-locking-for-xs_swap_enable-disable.patch
+	patches.suse/SUNRPC-Don-t-call-connect-more-than-once-on-a-TCP-so.patch
 	patches.suse/SUNRPC-avoid-race-between-mod_timer-and-del_timer_sy.patch
 	patches.suse/SUNRPC-don-t-resend-a-task-on-an-offlined-transport.patch
 	patches.suse/NFSv4.1-don-t-retry-BIND_CONN_TO_SESSION-on-session-.patch
