--- a/series.conf
+++ b/series.conf
@@ -14166,6 +14166,7 @@
 	patches.suse/NFSv4.1-Handle-NFS4ERR_DELAY-replies-to-OP_SEQUENCE-.patch
 	patches.suse/sunrpc-fix-expiry-of-auth-creds.patch
 	patches.suse/NFSv4-Fix-races-in-the-legacy-idmapper-upcall.patch
+	patches.suse/NFSv4.1-RECLAIM_COMPLETE-must-handle-EACCES.patch
 	patches.suse/Input-exc3000-fix-return-value-check-of-wait_for_com.patch
 	patches.suse/Input-i8042-move-__initconst-to-fix-code-styling-war.patch
 	patches.suse/Input-i8042-merge-quirk-tables.patch
