--- a/series.conf
+++ b/series.conf
@@ -11931,6 +11931,7 @@
 	patches.suse/kvm-x86-cpuid-Only-provide-CPUID-leaf-0xA-if-host-ha.patch
 	patches.suse/SUNRPC-release-the-transport-of-a-relocated-task-wit.patch
 	patches.suse/NFSv4-Don-t-invalidate-inode-attributes-on-delegatio.patch
+	patches.suse/SUNRPC-Don-t-leak-sockets-in-xs_local_connect.patch
 	patches.suse/SUNRPC-Ensure-gss-proxy-connects-on-setup.patch
 	patches.suse/Revert-SUNRPC-attempt-AF_LOCAL-connect-on-setup.patch
 	patches.suse/s390-dasd-fix-data-corruption-for-ESE-devices
