pNFS/flexfiles: Report RDMA connection errors to the server (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14161,6 +14161,7 @@
 	patches.suse/pinctrl-sunxi-Add-I-O-bias-setting-for-H6-R-PIO.patch
 	patches.suse/pinctrl-qcom-sm8250-Fix-PDC-map.patch
 	patches.suse/Revert-pNFS-nfs3_set_ds_client-should-set-NFS_CS_NOP.patch
+	patches.suse/pNFS-flexfiles-Report-RDMA-connection-errors-to-the-.patch
 	patches.suse/Input-exc3000-fix-return-value-check-of-wait_for_com.patch
 	patches.suse/Input-i8042-move-__initconst-to-fix-code-styling-war.patch
 	patches.suse/Input-i8042-merge-quirk-tables.patch
