--- a/series.conf
+++ b/series.conf
@@ -14144,6 +14144,7 @@
 	patches.suse/fs-move-S_ISGID-stripping-into-the-vfs_-helpers.patch
 	patches.suse/nfsd-eliminate-the-NFSD_FILE_BREAK_-flags.patch
 	patches.suse/SUNRPC-Fix-xdr_encode_bool.patch
+	patches.suse/lockd-detect-and-reject-lock-arguments-that-overflow.patch
 	patches.suse/Revert-scripts-mod-modpost.c-permit-.cranges-secton-.patch
 	patches.suse/kbuild-dummy-tools-avoid-tmpdir-leak-in-dummy-gcc.patch
 	patches.suse/apparmor-fix-absroot-causing-audited-secids-to-begin.patch
