--- a/series.conf
+++ b/series.conf
@@ -14264,6 +14264,7 @@
 	patches.suse/ratelimit-Fix-data-races-in-___ratelimit.patch
 	patches.suse/netfilter-nf_tables-disallow-binding-to-already-boun.patch
 	patches.suse/loop-Check-for-overflow-while-configuring-loop.patch
+	patches.suse/md-call-__md_stop_writes-in-md_stop.patch
 	patches.suse/drm-gem-Fix-GEM-handle-release-errors.patch
 	patches.suse/nouveau-explicitly-wait-on-the-fence-in-nouveau_bo_m.patch
 	patches.suse/drm-amdgpu-Move-psp_xgmi_terminate-call-from-amdgpu_.patch
