NFS: LOOKUP_DIRECTORY is also ok with symlinks (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9819,6 +9819,7 @@
 	patches.suse/mtd-rawnand-brcmnand-Fixed-incorrect-sub-page-ECC-st.patch
 	patches.suse/ACPI-processor-idle-fix-lockup-regression-on-32-bit-.patch
 	patches.suse/NFS-Remove-an-incorrect-revalidation-in-nfs4_update_.patch
+	patches.suse/NFS-LOOKUP_DIRECTORY-is-also-ok-with-symlinks.patch
 	patches.suse/NFS-Do-not-report-writeback-errors-in-nfs_getattr.patch
 	patches.suse/ucounts-Enforce-RLIMIT_NPROC-not-RLIMIT_NPROC-1.patch
 	patches.suse/ucounts-Base-set_cred_ucounts-changes-on-the-real-us.patch
