ACPI: processor idle: Practically limit "Dummy wait" workaround to old Intel systems (bsc#1203767).

--- a/series.conf
+++ b/series.conf
@@ -2383,6 +2383,7 @@
 	########################################################
 	# PM
 	########################################################
+	patches.suse/ACPI-processor-idle-Practically-limit-Dummy-wait-wor.patch
 
 	########################################################
 	# DRM / Graphics
