--- a/series.conf
+++ b/series.conf
@@ -14324,6 +14324,7 @@
 	patches.suse/usb-dwc3-disable-USB-core-PHY-management.patch
 	patches.suse/usb-gadget-udc-xilinx-replace-memcpy-with-memcpy_toi.patch
 	patches.suse/usb-dwc2-fix-wrong-order-of-phy_power_on-and-phy_ini.patch
+	patches.suse/USB-core-Prevent-nested-device-reset-calls.patch
 	patches.suse/media-mceusb-Use-new-usb_control_msg_-routines.patch
 	patches.suse/usb-gadget-mass_storage-Fix-cdrom-data-transfers-on-.patch
 	patches.suse/usb-cdns3-fix-incorrect-handling-TRB_SMM-flag-for-IS.patch
