usb.h: struct usb_device: hide new member (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15052,6 +15052,8 @@
 
 	patches.kabi/kABI-Fix-kABI-after-SNP-Guest-backport.patch
 
+	patches.kabi/usb.h-struct-usb_device-hide-new-member.patch
+
 	########################################################
 	# SLE15-SP3 OOT performance patches evaluated but left
 	# disabled. See patches for the SLE 15 SP4 notes.
