fuse: Remove the control interface for virtio-fs (bsc#1203798).

--- a/series.conf
+++ b/series.conf
@@ -14103,6 +14103,7 @@
 	patches.suse/exfat-Drop-superfluous-new-line-for-error-messages.patch
 	patches.suse/fuse-limit-nsec.patch
 	patches.suse/fuse-ioctl-translate-ENOSYS.patch
+	patches.suse/fuse-Remove-the-control-interface-for-virtio-fs.patch
 	patches.suse/serial-8250_dw-Store-LSR-into-lsr_saved_flags-in-dw8.patch
 	patches.suse/tty-serial-Fix-refcount-leak-bug-in-ucc_uart.c.patch
 	patches.suse/tty-n_gsm-fix-user-open-not-possible-at-responder-un.patch
