mlxsw: resources: Add resource identifier for RIF MAC profiles (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -5827,6 +5827,7 @@
 	patches.suse/net-mlx5-SF_DEV-Add-SF-device-trace-points.patch
 	patches.suse/vrf-run-conntrack-only-in-context-of-lower-physdev-f.patch
 	patches.suse/mlxsw-reg-Add-MAC-profile-ID-field-to-RITR-register.patch
+	patches.suse/mlxsw-resources-Add-resource-identifier-for-RIF-MAC-.patch
 	patches.suse/net-annotate-data-race-in-neigh_output.patch
 	patches.suse/msft-hv-2459-net-mana-Allow-setting-the-number-of-queues-while-th.patch
 	patches.suse/ifb-Depend-on-netfilter-alternatively-to-tc.patch
