virtio_net: introduce TX timeout watchdog (jsc#PED-370).

--- a/series.conf
+++ b/series.conf
@@ -5268,6 +5268,7 @@
 	patches.suse/net-net_namespace-Fix-undefined-member-in-key_remove.patch
 	patches.suse/net-phylink-don-t-call-netif_carrier_off-with-NULL-n.patch
 	patches.suse/octeontx2-af-verify-CQ-context-updates.patch
+	patches.suse/virtio_net-introduce-TX-timeout-watchdog.patch
 	patches.suse/devlink-Make-devlink_register-to-be-void.patch
 	patches.suse/net-mlx4-Add-support-for-XDP_REDIRECT.patch
 	patches.suse/bnxt_en-Check-devlink-allocation-and-registration-st.patch
