net/mlx5e: Drop cqe_bcnt32 from mlx5e_skb_from_cqe_mpwrq_linear (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -11697,6 +11697,7 @@
 	patches.suse/net-mlx5e-Build-SKB-in-place-over-the-first-fragment.patch
 	patches.suse/net-mlx5e-RX-Test-the-XDP-program-existence-out-of-t.patch
 	patches.suse/net-mlx5e-Drop-the-len-output-parameter-from-mlx5e_x.patch
+	patches.suse/net-mlx5e-Drop-cqe_bcnt32-from-mlx5e_skb_from_cqe_mp.patch
 	patches.suse/mt76-mt7921-fix-mt7921_queues_acq-implementation.patch
 	patches.suse/mt76-fix-monitor-mode-crash-with-sdio-driver.patch
 	patches.suse/rfkill-make-new-event-layout-opt-in.patch
