--- a/series.conf
+++ b/series.conf
@@ -11701,6 +11701,7 @@
 	patches.suse/net-mlx5-DR-Adjust-structure-member-to-reduce-memory.patch
 	patches.suse/net-mlx5-DR-Remove-mr_addr-rkey-from-struct-mlx5dr_i.patch
 	patches.suse/net-mlx5-DR-Remove-icm_addr-from-mlx5dr_icm_chunk-to.patch
+	patches.suse/net-mlx5-DR-Remove-num_of_entries-byte_size-from-str.patch
 	patches.suse/mt76-mt7921-fix-mt7921_queues_acq-implementation.patch
 	patches.suse/mt76-fix-monitor-mode-crash-with-sdio-driver.patch
 	patches.suse/rfkill-make-new-event-layout-opt-in.patch
