--- a/series.conf
+++ b/series.conf
@@ -8747,6 +8747,7 @@
 	patches.suse/libertas_tf-Use-struct_group-for-memcpy-region.patch
 	patches.suse/msft-hv-2488-hv_sock-Extract-hvs_send_data-helper-that-takes-only.patch
 	patches.suse/net-phy-prefer-1000baseT-over-1000baseKX.patch
+	patches.suse/xfrm-add-net-device-refcount-tracker-to-struct-xfrm_.patch
 	patches.suse/bpf-Adjust-BTF-log-size-limit.patch
 	patches.suse/bpf-Disallow-BPF_LOG_KERNEL-log-level-for-bpf-BPF_BTF_LOAD.patch
 	patches.suse/bpf-Remove-config-check-to-enable-bpf-support-for-branch-records.patch
