devlink: Simplify devlink resources unregister call (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -8677,6 +8677,7 @@
 	patches.suse/net-dsa-ocelot-seville-utilize-of_mdiobus_register.patch
 	patches.suse/devlink-Remove-misleading-internal_flags-from-health.patch
 	patches.suse/net-stmmac-Add-platform-level-debug-register-dump-fe.patch
+	patches.suse/devlink-Simplify-devlink-resources-unregister-call.patch
 	patches.suse/igc-AF_XDP-zero-copy-metadata-adjust-breaks-SKBs-on-.patch
 	patches.suse/net-ice-Fix-boolean-assignment.patch
 	patches.suse/net-ice-Remove-unused-enum.patch
