--- a/series.conf
+++ b/series.conf
@@ -8695,6 +8695,7 @@
 	patches.suse/mlxsw-item-Add-support-for-local_port-field-in-a-spl.patch
 	patches.suse/mlxsw-reg-Align-existing-registers-to-use-extended-l.patch
 	patches.suse/mlxsw-reg-Increase-port_num-field-in-PMTDB-register.patch
+	patches.suse/mlxsw-reg-Adjust-PPCNT-register-to-support-local-por.patch
 	patches.suse/qed-Enhance-rammod-debug-prints-to-provide-pretty-de.patch
 	patches.suse/qed-enhance-tx-timeout-debug-info.patch
 	patches.suse/qed-esl-priv-flag-support-through-ethtool.patch
