iavf: Enable setting RSS hash key (jsc#PED-835).

--- a/series.conf
+++ b/series.conf
@@ -8686,6 +8686,7 @@
 	patches.suse/iavf-Log-info-when-VF-is-entering-and-leaving-Allmul.patch
 	patches.suse/iavf-return-errno-code-instead-of-status-code.patch
 	patches.suse/iavf-Add-trace-while-removing-device.patch
+	patches.suse/iavf-Enable-setting-RSS-hash-key.patch
 	patches.suse/qed-Enhance-rammod-debug-prints-to-provide-pretty-de.patch
 	patches.suse/qed-enhance-tx-timeout-debug-info.patch
 	patches.suse/qed-esl-priv-flag-support-through-ethtool.patch
