--- a/series.conf
+++ b/series.conf
@@ -9754,6 +9754,7 @@
 	patches.suse/ifcvf-vDPA-fix-misuse-virtio-net-device-config-size-.patch
 	patches.suse/docs-document-sysfs-ABI-for-vDPA-bus.patch
 	patches.suse/vdpa-add-driver_override-support.patch
+	patches.suse/net-mlx5_vdpa-Offer-VIRTIO_NET_F_MTU-when-setting-MT.patch
 	patches.suse/virtio-virtio_mem-handle-a-possible-NULL-as-a-memcpy.patch
 	patches.suse/virtio_ring-mark-ring-unused-on-error.patch
 	patches.suse/vdpa-clean-up-get_config_size-ret-value-handling.patch
