--- a/series.conf
+++ b/series.conf
@@ -8892,6 +8892,7 @@
 	patches.suse/net-mlx5-Let-user-configure-max_macs-generic-param.patch
 	patches.suse/net-mlx5-Remove-the-repeated-declaration.patch
 	patches.suse/net-mlx5e-Use-bitmap-field-for-profile-features.patch
+	patches.suse/net-mlx5e-Add-profile-indications-for-PTP-and-QOS-HT.patch
 	patches.suse/mt76-mt7921-drop-offload_flags-overwritten.patch
 	patches.suse/mt76-mt7615-fix-possible-deadlock-while-mt7615_regis.patch
 	patches.suse/mt76-do-not-pass-the-received-frame-with-decryption-.patch
