iavf: Remove non-inclusive language (jsc#PED-835).

--- a/series.conf
+++ b/series.conf
@@ -11514,6 +11514,7 @@
 	patches.suse/iavf-remove-redundant-ret-variable.patch
 	patches.suse/iavf-stop-leaking-iavf_status-as-errno-values.patch
 	patches.suse/iavf-Fix-incorrect-use-of-assigning-iavf_status-to-i.patch
+	patches.suse/iavf-Remove-non-inclusive-language.patch
 	patches.suse/qed-display-VF-trust-config.patch
 	patches.suse/qed-validate-and-restrict-untrusted-VFs-vlan-promisc.patch
 	patches.suse/bpf-Add-config-to-allow-loading-modules-with-BTF-mis.patch
