--- a/series.conf
+++ b/series.conf
@@ -10515,6 +10515,7 @@
 	patches.suse/net-mlx5-DR-Fix-slab-out-of-bounds-in-mlx5_cmd_dr_cr.patch
 	patches.suse/net-mlx5-DR-Don-t-allow-match-on-IP-w-o-matching-on-.patch
 	patches.suse/net-mlx5-DR-Fix-the-threshold-that-defines-when-pool.patch
+	patches.suse/net-mlx5-Update-log_max_qp-value-to-be-17-at-most.patch
 	patches.suse/net-mlx5-Fix-wrong-limitation-of-metadata-match-on-e.patch
 	patches.suse/net-mlx5-Fix-tc-max-supported-prio-for-nic-mode-be7f4b0a.patch
 	patches.suse/net-mlx5-Fix-possible-deadlock-on-rule-deletion.patch
