--- a/series.conf
+++ b/series.conf
@@ -9325,6 +9325,7 @@
 	patches.suse/platform-x86-intel-Move-intel_pmt-from-MFD-to-Auxili.patch
 	patches.suse/RDMA-irdma-Use-auxiliary_device-driver-data-helpers.patch
 	patches.suse/net-mlx5e-Use-auxiliary_device-driver-data-helpers.patch
+	patches.suse/vdpa-mlx5-Use-auxiliary_device-driver-data-helpers.patch
 	patches.suse/debugfs-lockdown-Allow-reading-debugfs-files-that-ar.patch
 	patches.suse/drivers-firmware-Add-missing-platform_device_put-in-.patch
 	patches.suse/staging-rtl8192e-return-error-code-from-rtllib_softm.patch
