mlxsw: core_env: Defer handling of module temperature warning events (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -5250,6 +5250,7 @@
 	patches.suse/devlink-Delete-not-used-single-parameter-notificatio.patch
 	patches.suse/mlxsw-core-Initialize-switch-driver-last.patch
 	patches.suse/mlxsw-core-Remove-mlxsw_core_is_initialized.patch
+	patches.suse/mlxsw-core_env-Defer-handling-of-module-temperature-.patch
 	patches.suse/net-chelsio-cxgb4vf-Make-use-of-the-helper-function-.patch
 	patches.suse/octeontx2-pf-CN10K-Hide-RPM-stats-over-ethtool.patch
 	patches.suse/octeontx2-af-Hardware-configuration-for-inline-IPsec.patch
