--- a/series.conf
+++ b/series.conf
@@ -11410,6 +11410,7 @@
 	patches.suse/i40e-Remove-rx-page-reuse-double-count.patch
 	patches.suse/i40e-Aggregate-and-export-RX-page-reuse-stat.patch
 	patches.suse/i40e-Add-a-stat-tracking-new-RX-page-allocations.patch
+	patches.suse/i40e-Add-a-stat-for-tracking-pages-waived.patch
 	patches.suse/octeontx2-af-Don-t-enable-Pause-frames-by-default.patch
 	patches.suse/octeontx2-af-Priority-flow-control-configuration-sup.patch
 	patches.suse/octeontx2-af-Flow-control-resource-management.patch
