net/mlx5: Print more info on pci error handlers (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -8702,6 +8702,7 @@
 	patches.suse/mlx5-fix-mlx5i_grp_sw_update_stats-stack-usage.patch
 	patches.suse/net-mlx5-Fix-error-return-code-in-esw_qos_create.patch
 	patches.suse/net-mlx5-SF-silence-an-uninitialized-variable-warnin.patch
+	patches.suse/net-mlx5-Print-more-info-on-pci-error-handlers.patch
 	patches.suse/qed-enhance-tx-timeout-debug-info.patch
 	patches.suse/qed-esl-priv-flag-support-through-ethtool.patch
 	patches.suse/lib-add-reference-counting-tracking-infrastructure.patch
