net/mlx5: DR, Remove 4 members from mlx5dr_ste_htbl to reduce memory (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -11702,6 +11702,7 @@
 	patches.suse/net-mlx5-DR-Remove-mr_addr-rkey-from-struct-mlx5dr_i.patch
 	patches.suse/net-mlx5-DR-Remove-icm_addr-from-mlx5dr_icm_chunk-to.patch
 	patches.suse/net-mlx5-DR-Remove-num_of_entries-byte_size-from-str.patch
+	patches.suse/net-mlx5-DR-Remove-4-members-from-mlx5dr_ste_htbl-to.patch
 	patches.suse/mt76-mt7921-fix-mt7921_queues_acq-implementation.patch
 	patches.suse/mt76-fix-monitor-mode-crash-with-sdio-driver.patch
 	patches.suse/rfkill-make-new-event-layout-opt-in.patch
