net/mlx5e: Prepare non-linear legacy RQ for XDP multi buffer support (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -11717,6 +11717,7 @@
 	patches.suse/i40e-little-endian-only-valid-checksums.patch
 	patches.suse/igb-zero-hwtstamp-by-default.patch
 	patches.suse/xfrm-delete-duplicated-functions-that-calls-same-xfr.patch
+	patches.suse/net-mlx5e-Prepare-non-linear-legacy-RQ-for-XDP-multi.patch
 	patches.suse/qed-remove-unnecessary-memset-in-qed_init_fw_funcs.patch
 	patches.suse/bnxt-use-the-devlink-instance-lock-to-protect-sriov.patch
 	patches.suse/devlink-add-explicitly-locked-flavor-of-the-rate-nod.patch
