--- a/series.conf
+++ b/series.conf
@@ -11515,6 +11515,7 @@
 	patches.suse/iavf-stop-leaking-iavf_status-as-errno-values.patch
 	patches.suse/iavf-Fix-incorrect-use-of-assigning-iavf_status-to-i.patch
 	patches.suse/iavf-Remove-non-inclusive-language.patch
+	patches.suse/mlx5-add-support-for-page_pool_get_stats.patch
 	patches.suse/qed-display-VF-trust-config.patch
 	patches.suse/qed-validate-and-restrict-untrusted-VFs-vlan-promisc.patch
 	patches.suse/bpf-Add-config-to-allow-loading-modules-with-BTF-mis.patch
