--- a/series.conf
+++ b/series.conf
@@ -8782,6 +8782,7 @@
 	patches.suse/net-mlx5-Refactor-mlx5_get_flow_namespace.patch
 	patches.suse/net-mlx5-Create-more-priorities-for-FDB-bypass-names.patch
 	patches.suse/RDMA-mlx5-Add-support-to-multiple-priorities-for-FDB.patch
+	patches.suse/net-mlx5-Introduce-log_max_current_uc_list_wr_suppor.patch
 	patches.suse/gve-Correct-order-of-processing-device-options.patch
 	patches.suse/gve-Move-the-irq-db-indexes-out-of-the-ntfy-block-st.patch
 	patches.suse/gve-Update-gve_free_queue_page_list-signature.patch
