--- a/series.conf
+++ b/series.conf
@@ -11355,6 +11355,7 @@
 	patches.suse/igc-Remove-useless-DMA-32-fallback-configuration.patch
 	patches.suse/igb-Remove-useless-DMA-32-fallback-configuration.patch
 	patches.suse/igbvf-Remove-useless-DMA-32-fallback-configuration.patch
+	patches.suse/net-mlx5e-Move-code-chunk-setting-encap-dests-into-i.patch
 	patches.suse/ethtool-add-header-data-split-indication.patch
 	patches.suse/bnxt-report-header-data-split-state.patch
 	patches.suse/Bluetooth-btintel-Fix-WBS-setting-for-Intel-legacy-R.patch
