--- a/series.conf
+++ b/series.conf
@@ -8645,6 +8645,7 @@
 	patches.suse/net-mscc-ocelot-set-vcap-IS2-chain-to-goto-PSFP-chai.patch
 	patches.suse/net-mscc-ocelot-add-gate-and-police-action-offload-t.patch
 	patches.suse/net-dsa-felix-support-psfp-filter-on-vsc9959.patch
+	patches.suse/net-dsa-felix-add-stream-gate-settings-for-psfp.patch
 	patches.suse/mlxsw-constify-address-in-mlxsw_sp_port_dev_addr_set.patch
 	patches.suse/ipw2200-constify-address-in-ipw_send_adapter_address.patch
 	patches.suse/amd-lance-use-eth_hw_addr_set.patch
