net/mlx5: Dynamically resize flow counters query buffer (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -8710,6 +8710,7 @@
 	patches.suse/net-mlx5e-Remove-redundant-actions-arg-from-vlan-pus.patch
 	patches.suse/net-mlx5e-TC-Move-common-flow_action-checks-into-fun.patch
 	patches.suse/net-mlx5e-TC-Set-flow-attr-ip_version-earlier.patch
+	patches.suse/net-mlx5-Dynamically-resize-flow-counters-query-buff.patch
 	patches.suse/qed-enhance-tx-timeout-debug-info.patch
 	patches.suse/qed-esl-priv-flag-support-through-ethtool.patch
 	patches.suse/lib-add-reference-counting-tracking-infrastructure.patch
