--- a/series.conf
+++ b/series.conf
@@ -9060,6 +9060,7 @@
 	patches.suse/i40e-Update-FW-API-version.patch
 	patches.suse/i40e-Remove-non-inclusive-language.patch
 	patches.suse/i40e-remove-variables-set-but-not-used.patch
+	patches.suse/iavf-remove-an-unneeded-variable.patch
 	patches.suse/net-mscc-ocelot-fix-incorrect-balancing-with-down-LA.patch
 	patches.suse/can-mcp251xfd-mcp251xfd_tef_obj_read-fix-typo-in-err.patch
 	patches.suse/can-mcp251xfd-add-missing-newline-to-printed-strings.patch
