--- a/series.conf
+++ b/series.conf
@@ -8683,6 +8683,7 @@
 	patches.suse/net-ice-Fix-boolean-assignment.patch
 	patches.suse/net-ice-Remove-unused-enum.patch
 	patches.suse/iavf-Add-change-MTU-message.patch
+	patches.suse/iavf-Log-info-when-VF-is-entering-and-leaving-Allmul.patch
 	patches.suse/qed-Enhance-rammod-debug-prints-to-provide-pretty-de.patch
 	patches.suse/qed-enhance-tx-timeout-debug-info.patch
 	patches.suse/qed-esl-priv-flag-support-through-ethtool.patch
