net/mlx5e: Refactor mod header management API (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -8612,6 +8612,7 @@
 	patches.suse/net-mlx5e-Support-ethtool-cq-mode.patch
 	patches.suse/net-mlx5-Fix-format-security-build-warnings.patch
 	patches.suse/net-mlx5-Avoid-printing-health-buffer-when-firmware-.patch
+	patches.suse/net-mlx5e-Refactor-mod-header-management-API.patch
 	patches.suse/Bluetooth-L2CAP-Fix-not-initializing-sk_peer_pid.patch
 	patches.suse/Bluetooth-btusb-Fix-application-of-sizeof-to-pointer.patch
 	patches.suse/Bluetooth-Fix-debugfs-entry-leak-in-hci_register_dev.patch
