--- a/series.conf
+++ b/series.conf
@@ -11467,6 +11467,7 @@
 	patches.suse/net-mlx5e-E-Switch-Add-support-for-tx_port_ts-in-swi.patch
 	patches.suse/net-mlx5e-TC-Move-flow-hashtable-to-be-per-rep.patch
 	patches.suse/net-mlx5e-Pass-actions-param-to-actions_match_suppor.patch
+	patches.suse/net-mlx5e-Add-post-act-offload-unoffload-API.patch
 	patches.suse/selftests-mptcp-add-csum-mib-check-for-mptcp_connect.patch
 	patches.suse/net-ibmvnic-Cleanup-workaround-doing-an-EOI-after-pa.patch
 	patches.suse/ionic-catch-transition-back-to-RUNNING-with-fw_gener.patch
