net/mlx5e: Use select queue parameters to sync with control flow (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -11452,6 +11452,7 @@
 	patches.suse/net-mlx5e-Sync-txq2sq-updates-with-mlx5e_xmit-for-HT.patch
 	patches.suse/net-mlx5e-Introduce-select-queue-parameters.patch
 	patches.suse/net-mlx5e-Move-mlx5e_select_queue-to-en-selq.c.patch
+	patches.suse/net-mlx5e-Use-select-queue-parameters-to-sync-with-c.patch
 	patches.suse/selftests-mptcp-add-csum-mib-check-for-mptcp_connect.patch
 	patches.suse/net-ibmvnic-Cleanup-workaround-doing-an-EOI-after-pa.patch
 	patches.suse/ionic-catch-transition-back-to-RUNNING-with-fw_gener.patch
