--- a/series.conf
+++ b/series.conf
@@ -11695,6 +11695,7 @@
 	patches.suse/net-mlx5e-Validate-MTU-when-building-non-linear-lega.patch
 	patches.suse/net-mlx5e-Add-headroom-only-to-the-first-fragment-in.patch
 	patches.suse/net-mlx5e-Build-SKB-in-place-over-the-first-fragment.patch
+	patches.suse/net-mlx5e-RX-Test-the-XDP-program-existence-out-of-t.patch
 	patches.suse/mt76-mt7921-fix-mt7921_queues_acq-implementation.patch
 	patches.suse/mt76-fix-monitor-mode-crash-with-sdio-driver.patch
 	patches.suse/rfkill-make-new-event-layout-opt-in.patch
