flow_offload: allow user to offload tc action to net device (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -8866,6 +8866,7 @@
 	patches.suse/flow_offload-add-index-to-flow_action_entry-structur.patch
 	patches.suse/flow_offload-rename-offload-functions-with-offload-i.patch
 	patches.suse/flow_offload-add-ops-to-tc_action_ops-for-flow-actio.patch
+	patches.suse/flow_offload-allow-user-to-offload-tc-action-to-net-.patch
 	patches.suse/bnx2x-Utilize-firmware-7.13.21.0.patch
 	patches.suse/bnx2x-Invalidate-fastpath-HSI-version-for-VFs.patch
 	patches.suse/ieee80211-change-HE-nominal-packet-padding-value-def.patch
