--- a/series.conf
+++ b/series.conf
@@ -8856,6 +8856,7 @@
 	patches.suse/ath11k-Avoid-false-DEADLOCK-warning-reported-by-lock.patch
 	patches.suse/ath11k-Fix-deleting-uninitialized-kernel-timer-durin.patch
 	patches.suse/ath11k-Fix-a-NULL-pointer-dereference-in-ath11k_mac_.patch
+	patches.suse/virtchnl-Add-support-for-new-VLAN-capabilities.patch
 	patches.suse/flow_offload-reject-to-offload-tc-actions-in-offload.patch
 	patches.suse/bnx2x-Utilize-firmware-7.13.21.0.patch
 	patches.suse/bnx2x-Invalidate-fastpath-HSI-version-for-VFs.patch
