net: fixup build after bpf header changes (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -9023,6 +9023,7 @@
 	patches.suse/qed-Use-dma_set_mask_and_coherent-and-simplify-code.patch
 	patches.suse/batman-adv-allow-netlink-usage-in-unprivileged-conta.patch
 	patches.suse/net-mlx5-CT-Set-flow-source-hint-from-provided-tuple.patch
+	patches.suse/net-fixup-build-after-bpf-header-changes.patch
 	patches.suse/ethernet-sfc-remove-redundant-rc-variable.patch
 	patches.suse/mac80211-allow-non-standard-VHT-MCS-10-11.patch
 	patches.suse/net-ethernet-mtk_eth_soc-fix-return-values-and-refac.patch
