--- a/series.conf
+++ b/series.conf
@@ -9008,6 +9008,7 @@
 	patches.suse/net-mlx5-Set-SMFS-as-a-default-steering-mode-if-devi.patch
 	patches.suse/bpf-Do-not-WARN-in-bpf_warn_invalid_xdp_action.patch
 	patches.suse/bpf-Let-bpf_warn_invalid_xdp_action-report-more-info.patch
+	patches.suse/xsk-Wipe-out-dead-zero_copy_allocator-declarations.patch
 	patches.suse/bpf-Introduce-composable-reg-ret-and-arg-types.patch
 	patches.suse/bpf-Replace-ARG_XXX_OR_NULL-with-ARG_XXX-PTR_MAYBE_N.patch
 	patches.suse/bpf-Replace-RET_XXX_OR_NULL-with-RET_XXX-PTR_MAYBE_N.patch
