--- a/series.conf
+++ b/series.conf
@@ -11687,6 +11687,7 @@
 	patches.suse/can-isotp-return-EADDRNOTAVAIL-when-reading-from-unb.patch
 	patches.suse/can-isotp-support-MSG_TRUNC-flag-when-reading-from-s.patch
 	patches.suse/bareudp-use-ipv6_mod_enabled-to-check-if-IPv6-enable.patch
+	patches.suse/net-sched-add-vlan-push_eth-and-pop_eth-action-to-th.patch
 	patches.suse/net-stmmac-clean-up-impossible-condition.patch
 	patches.suse/bnx2x-use-correct-format-characters.patch
 	patches.suse/mt76-mt7921-fix-mt7921_queues_acq-implementation.patch
