--- a/series.conf
+++ b/series.conf
@@ -8867,6 +8867,7 @@
 	patches.suse/flow_offload-rename-offload-functions-with-offload-i.patch
 	patches.suse/flow_offload-add-ops-to-tc_action_ops-for-flow-actio.patch
 	patches.suse/flow_offload-allow-user-to-offload-tc-action-to-net-.patch
+	patches.suse/flow_offload-add-skip_hw-and-skip_sw-to-control-if-o.patch
 	patches.suse/bnx2x-Utilize-firmware-7.13.21.0.patch
 	patches.suse/bnx2x-Invalidate-fastpath-HSI-version-for-VFs.patch
 	patches.suse/ieee80211-change-HE-nominal-packet-padding-value-def.patch
