--- a/series.conf
+++ b/series.conf
@@ -616,6 +616,7 @@
 	patches.suse/bpf-Fix-potential-memleak-and-UAF-in-the-verifier.patch
 	patches.suse/selftests-bpf-Remove-unused-variable-in-tc_tunnel-pr.patch
 	patches.suse/gve-fix-the-wrong-AdminQ-buffer-overflow-check.patch
+	patches.suse/net-sched-Remove-unnecessary-if-statement.patch
 	patches.suse/bnx2x-remove-unused-variable-cur_data_offset.patch
 	patches.suse/igc-Add-possibility-to-add-flex-filter.patch
 	patches.suse/igc-Integrate-flex-filter-into-ethtool-ops.patch
