--- a/series.conf
+++ b/series.conf
@@ -3374,6 +3374,7 @@
 	patches.suse/vdpa-Add-reset-callback-in-vdpa_config_ops.patch
 	patches.suse/vhost-vdpa-Handle-the-failure-of-vdpa_reset.patch
 	patches.suse/vhost-iotlb-Add-an-opaque-pointer-for-vhost-IOTLB.patch
+	patches.suse/vdpa-Add-an-opaque-pointer-for-vdpa_config_ops.dma_m.patch
 	patches.suse/cifs-update-FSCTL-definitions.patch
 	patches.suse/cifs-rename-cifs_common-to-smbfs_common.patch
 	patches.suse/cifs-move-SMB-FSCTL-definitions-to-common-code.patch
