iavf: stop leaking iavf_status as "errno" values (jsc#PED-835).

--- a/series.conf
+++ b/series.conf
@@ -11512,6 +11512,7 @@
 	patches.suse/iavf-refactor-processing-of-VLAN-V2-capability-messa.patch
 	patches.suse/iavf-Add-usage-of-new-virtchnl-format-to-set-default.patch
 	patches.suse/iavf-remove-redundant-ret-variable.patch
+	patches.suse/iavf-stop-leaking-iavf_status-as-errno-values.patch
 	patches.suse/qed-display-VF-trust-config.patch
 	patches.suse/qed-validate-and-restrict-untrusted-VFs-vlan-promisc.patch
 	patches.suse/bpf-Add-config-to-allow-loading-modules-with-BTF-mis.patch
