i40e: xsk: Move tmp desc array from driver to pool (jsc#PED-372).

--- a/series.conf
+++ b/series.conf
@@ -11417,6 +11417,7 @@
 	patches.suse/octeontx2-af-Flow-control-resource-management.patch
 	patches.suse/octeontx2-pf-PFC-config-support-with-DCBx.patch
 	patches.suse/net-enetc-allocate-CBD-ring-data-memory-using-DMA-co.patch
+	patches.suse/i40e-xsk-Move-tmp-desc-array-from-driver-to-pool.patch
 	patches.suse/qed-prevent-a-fw-assert-during-device-shutdown.patch
 	patches.suse/octeontx2-pf-Add-TC-feature-for-VFs.patch
 	patches.suse/ath10k-fix-memory-overwrite-of-the-WoWLAN-wakeup-pac.patch
