iavf: Refactor string format to avoid static analysis warnings (jsc#PED-835).

--- a/series.conf
+++ b/series.conf
@@ -8690,6 +8690,7 @@
 	patches.suse/iavf-Refactor-iavf_mac_filter-struct-memory-usage.patch
 	patches.suse/iavf-Fix-static-code-analysis-warning.patch
 	patches.suse/iavf-Refactor-text-of-informational-message.patch
+	patches.suse/iavf-Refactor-string-format-to-avoid-static-analysis.patch
 	patches.suse/qed-Enhance-rammod-debug-prints-to-provide-pretty-de.patch
 	patches.suse/qed-enhance-tx-timeout-debug-info.patch
 	patches.suse/qed-esl-priv-flag-support-through-ethtool.patch
