igc: Remove unused phy type (jsc#PED-375).

--- a/series.conf
+++ b/series.conf
@@ -8879,6 +8879,7 @@
 	patches.suse/mac80211-Remove-a-couple-of-obsolete-TODO.patch
 	patches.suse/mac80211-introduce-channel-switch-disconnect-functio.patch
 	patches.suse/igc-Remove-unused-_I_PHY_ID-define.patch
+	patches.suse/igc-Remove-unused-phy-type.patch
 	patches.suse/devlink-Add-new-io_eq_size-generic-device-param.patch
 	patches.suse/devlink-Add-new-event_eq_size-generic-device-param.patch
 	patches.suse/mt76-mt7921-drop-offload_flags-overwritten.patch
