igb: zero hwtstamp by default (jsc#PED-370).

--- a/series.conf
+++ b/series.conf
@@ -11715,6 +11715,7 @@
 	patches.suse/Bluetooth-call-hci_le_conn_failed-with-hdev-lock-in-.patch
 	patches.suse/Bluetooth-btmtksdio-Fix-kernel-oops-in-btmtksdio_int.patch
 	patches.suse/i40e-little-endian-only-valid-checksums.patch
+	patches.suse/igb-zero-hwtstamp-by-default.patch
 	patches.suse/qed-remove-unnecessary-memset-in-qed_init_fw_funcs.patch
 	patches.suse/bnxt-use-the-devlink-instance-lock-to-protect-sriov.patch
 	patches.suse/devlink-add-explicitly-locked-flavor-of-the-rate-nod.patch
