--- a/series.conf
+++ b/series.conf
@@ -8774,6 +8774,7 @@
 	patches.suse/net-mlx5e-Add-sample-and-ptype-to-tc_action-infra.patch
 	patches.suse/net-mlx5e-Add-redirect-ingress-to-tc-action-infra.patch
 	patches.suse/net-mlx5e-TC-action-parsing-loop.patch
+	patches.suse/net-mlx5e-Move-sample-attr-allocation-to-tc_action-s.patch
 	patches.suse/gve-Correct-order-of-processing-device-options.patch
 	patches.suse/gve-Move-the-irq-db-indexes-out-of-the-ntfy-block-st.patch
 	patches.suse/gve-Update-gve_free_queue_page_list-signature.patch
