mlxsw: spectrum: Do not return an error in ndo_stop() (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -5252,6 +5252,7 @@
 	patches.suse/mlxsw-core-Remove-mlxsw_core_is_initialized.patch
 	patches.suse/mlxsw-core_env-Defer-handling-of-module-temperature-.patch
 	patches.suse/mlxsw-core_env-Convert-module_info_lock-to-a-mutex.patch
+	patches.suse/mlxsw-spectrum-Do-not-return-an-error-in-ndo_stop.patch
 	patches.suse/net-chelsio-cxgb4vf-Make-use-of-the-helper-function-.patch
 	patches.suse/octeontx2-pf-CN10K-Hide-RPM-stats-over-ethtool.patch
 	patches.suse/octeontx2-af-Hardware-configuration-for-inline-IPsec.patch
