--- a/series.conf
+++ b/series.conf
@@ -9442,6 +9442,7 @@
 	patches.suse/be2net-Use-irq_update_affinity_hint.patch
 	patches.suse/ixgbe-Use-irq_update_affinity_hint.patch
 	patches.suse/scsi-lpfc-Use-irq_set_affinity.patch
+	patches.suse/net-mlx5-Use-irq_set_affinity_and_hint.patch
 	patches.suse/net-mlx4-Use-irq_update_affinity_hint.patch
 	patches.suse/irqchip-gic-v4-Disable-redistributors-view-of-the-VP.patch
 	patches.suse/clocksource-drivers-exynos_mct-Refactor-resources-al.patch
