--- a/series.conf
+++ b/series.conf
@@ -8219,6 +8219,7 @@
 	patches.suse/ALSA-hda-realtek-Fix-quirk-for-Clevo-NJ51CU.patch
 	patches.suse/net-sched-Extend-qdisc-control-block-with-tc-control.patch
 	patches.suse/net-sched-flow_dissector-Fix-matching-on-zone-id-for.patch
+	patches.suse/net-openvswitch-Fix-matching-zone-id-for-invalid-con.patch
 	patches.suse/net-marvell-prestera-fix-incorrect-return-of-port_fi.patch
 	patches.suse/net-marvell-prestera-fix-incorrect-structure-access.patch
 	patches.suse/tun-avoid-double-free-in-tun_free_netdev.patch
