net/mlx5: VLAN push on RX, pop on TX (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -11371,6 +11371,7 @@
 	patches.suse/net-mlx5e-CT-Remove-redundant-flow-args-from-tc-ct-c.patch
 	patches.suse/net-mlx5-Remove-unused-TIR-modify-bitmask-enums.patch
 	patches.suse/net-mlx5-Introduce-software-defined-steering-capabil.patch
+	patches.suse/net-mlx5-VLAN-push-on-RX-pop-on-TX.patch
 	patches.suse/ethtool-add-header-data-split-indication.patch
 	patches.suse/bnxt-report-header-data-split-state.patch
 	patches.suse/Bluetooth-btintel-Fix-WBS-setting-for-Intel-legacy-R.patch
