xsk: Optimize for aligned case (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -5355,6 +5355,7 @@
 	patches.suse/ice-Use-xdp_buf-instead-of-rx_buf-for-xsk-zero-copy.patch
 	patches.suse/ice-Use-the-xsk-batched-rx-allocation-interface.patch
 	patches.suse/i40e-Use-the-xsk-batched-rx-allocation-interface.patch
+	patches.suse/xsk-Optimize-for-aligned-case.patch
 	patches.suse/libbpf-Fix-skel_internal.h-to-set-errno-on-loader-re.patch
 	patches.suse/ionic-remove-debug-stats.patch
 	patches.suse/ionic-check-for-binary-values-in-FW-ver-string.patch
