--- a/series.conf
+++ b/series.conf
@@ -11683,6 +11683,7 @@
 	patches.suse/eth-nfp-replace-driver-s-pf-lock-with-devlink-instan.patch
 	patches.suse/eth-mlxsw-switch-to-explicit-locking-for-port-regist.patch
 	patches.suse/devlink-hold-the-instance-lock-in-port_split-port_un.patch
+	patches.suse/devlink-pass-devlink_port-to-port_split-port_unsplit.patch
 	patches.suse/can-isotp-return-EADDRNOTAVAIL-when-reading-from-unb.patch
 	patches.suse/can-isotp-support-MSG_TRUNC-flag-when-reading-from-s.patch
 	patches.suse/bareudp-use-ipv6_mod_enabled-to-check-if-IPv6-enable.patch
