--- a/series.conf
+++ b/series.conf
@@ -11370,6 +11370,7 @@
 	patches.suse/net-mlx5e-TC-Store-mapped-tunnel-id-on-flow-attr.patch
 	patches.suse/net-mlx5e-CT-Remove-redundant-flow-args-from-tc-ct-c.patch
 	patches.suse/net-mlx5-Remove-unused-TIR-modify-bitmask-enums.patch
+	patches.suse/net-mlx5-Introduce-software-defined-steering-capabil.patch
 	patches.suse/ethtool-add-header-data-split-indication.patch
 	patches.suse/bnxt-report-header-data-split-state.patch
 	patches.suse/Bluetooth-btintel-Fix-WBS-setting-for-Intel-legacy-R.patch
