--- a/series.conf
+++ b/series.conf
@@ -11482,6 +11482,7 @@
 	patches.suse/ixgbevf-clean-up-some-inconsistent-indenting.patch
 	patches.suse/ixgbe-Remove-non-inclusive-language.patch
 	patches.suse/nfp-refactor-policer-config-to-support-ingress-egres.patch
+	patches.suse/nfp-add-support-to-offload-tc-action-to-hardware.patch
 	patches.suse/sfc-default-config-to-1-channel-core-in-local-NUMA-n.patch
 	patches.suse/sfc-set-affinity-hints-in-local-NUMA-node-only.patch
 	patches.suse/tuntap-add-sanity-checks-about-msg_controllen-in-sen.patch
