--- a/series.conf
+++ b/series.conf
@@ -663,6 +663,7 @@
 	patches.suse/nfp-flower-ct-calculate-required-key_layers.patch
 	patches.suse/nfp-flower-ct-compile-match-sections-of-flow_payload.patch
 	patches.suse/nfp-flower-ct-add-actions-into-flow_pay-for-offload.patch
+	patches.suse/nfp-flower-ct-add-flow_pay-to-the-offload-table.patch
 	patches.suse/nfp-fix-return-statement-in-nfp_net_parse_meta.patch
 	patches.suse/compat-make-linux-compat.h-available-everywhere.patch
 	patches.suse/ethtool-improve-compat-ioctl-handling.patch
