vdpa/mlx5: Forward only packets with allowed MAC address (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -6497,6 +6497,7 @@
 	patches.suse/vdpa-Enable-user-to-set-mac-and-mtu-of-vdpa-device.patch
 	patches.suse/vdpa-mlx5-Fix-clearing-of-VIRTIO_NET_F_MAC-feature-b.patch
 	patches.suse/vdpa-mlx5-Support-configuration-of-MAC.patch
+	patches.suse/vdpa-mlx5-Forward-only-packets-with-allowed-MAC-addr.patch
 	patches.suse/MAINTAINERS-add-an-entry-for-NXP-S32G-boards.patch
 	patches.suse/ARM-s3c-irq-s3c24xx-Fix-return-value-check-for-s3c24.patch
 	patches.suse/arm64-zynqmp-Do-not-duplicate-flash-partition-label-.patch
