--- a/series.conf
+++ b/series.conf
@@ -8616,6 +8616,7 @@
 	patches.suse/net-mlx5-CT-Allow-static-allocation-of-mod-headers.patch
 	patches.suse/net-mlx5-TC-using-swap-instead-of-tmp-variable.patch
 	patches.suse/net-mlx5e-TC-Destroy-nic-flow-counter-if-exists.patch
+	patches.suse/net-mlx5e-TC-Move-kfree-calls-after-destroying-all-r.patch
 	patches.suse/Bluetooth-L2CAP-Fix-not-initializing-sk_peer_pid.patch
 	patches.suse/Bluetooth-btusb-Fix-application-of-sizeof-to-pointer.patch
 	patches.suse/Bluetooth-Fix-debugfs-entry-leak-in-hci_register_dev.patch
