net/mlx5: E-switch, Remove vport enabled check (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -8619,6 +8619,7 @@
 	patches.suse/net-mlx5e-TC-Move-kfree-calls-after-destroying-all-r.patch
 	patches.suse/net-mlx5e-TC-Move-comment-about-mod-header-flag-to-c.patch
 	patches.suse/net-mlx5e-Specify-out-ifindex-when-looking-up-decap-.patch
+	patches.suse/net-mlx5-E-switch-Remove-vport-enabled-check.patch
 	patches.suse/Bluetooth-L2CAP-Fix-not-initializing-sk_peer_pid.patch
 	patches.suse/Bluetooth-btusb-Fix-application-of-sizeof-to-pointer.patch
 	patches.suse/Bluetooth-Fix-debugfs-entry-leak-in-hci_register_dev.patch
