vdpa: Fix some coding style issues (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -3370,6 +3370,7 @@
 	patches.suse/virtio-blk-remove-unneeded-likely-statements.patch
 	patches.suse/iova-Export-alloc_iova_fast-and-free_iova_fast.patch
 	patches.suse/file-Export-receive_fd-to-modules.patch
+	patches.suse/vdpa-Fix-some-coding-style-issues.patch
 	patches.suse/cifs-update-FSCTL-definitions.patch
 	patches.suse/cifs-rename-cifs_common-to-smbfs_common.patch
 	patches.suse/cifs-move-SMB-FSCTL-definitions-to-common-code.patch
