--- a/series.conf
+++ b/series.conf
@@ -8870,6 +8870,7 @@
 	patches.suse/flow_offload-add-skip_hw-and-skip_sw-to-control-if-o.patch
 	patches.suse/flow_offload-add-process-to-update-action-stats-from.patch
 	patches.suse/net-sched-save-full-flags-for-tc-action.patch
+	patches.suse/flow_offload-add-reoffload-process-to-update-hw_coun.patch
 	patches.suse/bnx2x-Utilize-firmware-7.13.21.0.patch
 	patches.suse/bnx2x-Invalidate-fastpath-HSI-version-for-VFs.patch
 	patches.suse/ieee80211-change-HE-nominal-packet-padding-value-def.patch
