--- a/series.conf
+++ b/series.conf
@@ -3807,6 +3807,7 @@
 	patches.suse/vduse-missing-error-code-in-vduse_init.patch
 	patches.suse/vduse-Cleanup-the-old-kernel-states-after-reset-fail.patch
 	patches.suse/vdpa-mlx5-Clear-ready-indication-for-control-VQ.patch
+	patches.suse/vdpa-mlx5-Avoid-executing-set_vq_ready-if-device-is-.patch
 	patches.suse/fs-verity-fix-signed-integer-overflow-with-i_size-ne.patch
 	patches.suse/NIOS2-fix-kconfig-unmet-dependency-warning-for-SERIA.patch
 	patches.suse/NIOS2-setup.c-drop-unused-variable-dram_start.patch
