--- a/series.conf
+++ b/series.conf
@@ -9323,6 +9323,7 @@
 	patches.suse/PCI-Add-defines-for-accessing-PCIe-DVSEC-fields.patch
 	patches.suse/driver-core-auxiliary-bus-Add-driver-data-helpers.patch
 	patches.suse/platform-x86-intel-Move-intel_pmt-from-MFD-to-Auxili.patch
+	patches.suse/RDMA-irdma-Use-auxiliary_device-driver-data-helpers.patch
 	patches.suse/debugfs-lockdown-Allow-reading-debugfs-files-that-ar.patch
 	patches.suse/drivers-firmware-Add-missing-platform_device_put-in-.patch
 	patches.suse/staging-rtl8192e-return-error-code-from-rtllib_softm.patch
