Documentation: Add documentation for VDUSE (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -3379,6 +3379,7 @@
 	patches.suse/vdpa-Support-transferring-virtual-addressing-during-.patch
 	patches.suse/vduse-Implement-an-MMU-based-software-IOTLB.patch
 	patches.suse/vduse-Introduce-VDUSE-vDPA-Device-in-Userspace.patch
+	patches.suse/Documentation-Add-documentation-for-VDUSE.patch
 	patches.suse/cifs-update-FSCTL-definitions.patch
 	patches.suse/cifs-rename-cifs_common-to-smbfs_common.patch
 	patches.suse/cifs-move-SMB-FSCTL-definitions-to-common-code.patch
