iavf: Refactor text of informational message (jsc#PED-835).

--- a/series.conf
+++ b/series.conf
@@ -8689,6 +8689,7 @@
 	patches.suse/iavf-Enable-setting-RSS-hash-key.patch
 	patches.suse/iavf-Refactor-iavf_mac_filter-struct-memory-usage.patch
 	patches.suse/iavf-Fix-static-code-analysis-warning.patch
+	patches.suse/iavf-Refactor-text-of-informational-message.patch
 	patches.suse/qed-Enhance-rammod-debug-prints-to-provide-pretty-de.patch
 	patches.suse/qed-enhance-tx-timeout-debug-info.patch
 	patches.suse/qed-esl-priv-flag-support-through-ethtool.patch
