--- a/series.conf
+++ b/series.conf
@@ -8777,6 +8777,7 @@
 	patches.suse/net-mlx5e-Move-sample-attr-allocation-to-tc_action-s.patch
 	patches.suse/net-mlx5e-Add-post_parse-op-to-tc-action-infrastruct.patch
 	patches.suse/net-mlx5e-Move-vlan-action-chunk-into-tc-action-vlan.patch
+	patches.suse/net-mlx5e-Move-goto-action-checks-into-tc_action-got.patch
 	patches.suse/gve-Correct-order-of-processing-device-options.patch
 	patches.suse/gve-Move-the-irq-db-indexes-out-of-the-ntfy-block-st.patch
 	patches.suse/gve-Update-gve_free_queue_page_list-signature.patch
