netdevsim: Add multi-queue support (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -618,6 +618,7 @@
 	patches.suse/gve-fix-the-wrong-AdminQ-buffer-overflow-check.patch
 	patches.suse/net-sched-Remove-unnecessary-if-statement.patch
 	patches.suse/bnx2x-remove-unused-variable-cur_data_offset.patch
+	patches.suse/netdevsim-Add-multi-queue-support.patch
 	patches.suse/igc-Add-possibility-to-add-flex-filter.patch
 	patches.suse/igc-Integrate-flex-filter-into-ethtool-ops.patch
 	patches.suse/igc-Allow-for-Flex-Filters-to-be-installed.patch
