ixgbevf: switch to napi_build_skb() (jsc#PED-373).

--- a/series.conf
+++ b/series.conf
@@ -8973,6 +8973,7 @@
 	patches.suse/igb-switch-to-napi_build_skb.patch
 	patches.suse/igc-switch-to-napi_build_skb.patch
 	patches.suse/ixgbe-switch-to-napi_build_skb.patch
+	patches.suse/ixgbevf-switch-to-napi_build_skb.patch
 	patches.suse/Bluetooth-btusb-Add-one-more-Bluetooth-part-for-the-.patch
 	patches.suse/Bluetooth-btusb-Add-the-new-support-IDs-for-WCN6855.patch
 	patches.suse/Bluetooth-refactor-malicious-adv-data-check.patch
