--- a/series.conf
+++ b/series.conf
@@ -11359,6 +11359,7 @@
 	patches.suse/net-mlx5e-Pass-attr-arg-for-attaching-detaching-enca.patch
 	patches.suse/net-mlx5e-Move-counter-creation-call-to-alloc_flow_a.patch
 	patches.suse/net-mlx5e-TC-Move-pedit_headers_action-to-parse_attr.patch
+	patches.suse/net-mlx5e-TC-Split-pedit-offloads-verify-from-alloc_.patch
 	patches.suse/ethtool-add-header-data-split-indication.patch
 	patches.suse/bnxt-report-header-data-split-state.patch
 	patches.suse/Bluetooth-btintel-Fix-WBS-setting-for-Intel-legacy-R.patch
