--- a/series.conf
+++ b/series.conf
@@ -5828,6 +5828,7 @@
 	patches.suse/vrf-run-conntrack-only-in-context-of-lower-physdev-f.patch
 	patches.suse/mlxsw-reg-Add-MAC-profile-ID-field-to-RITR-register.patch
 	patches.suse/mlxsw-resources-Add-resource-identifier-for-RIF-MAC-.patch
+	patches.suse/mlxsw-spectrum_router-Propagate-extack-further.patch
 	patches.suse/net-annotate-data-race-in-neigh_output.patch
 	patches.suse/msft-hv-2459-net-mana-Allow-setting-the-number-of-queues-while-th.patch
 	patches.suse/ifb-Depend-on-netfilter-alternatively-to-tc.patch
