--- a/series.conf
+++ b/series.conf
@@ -9039,6 +9039,7 @@
 	patches.suse/mlxsw-spectrum_acl_bloom_filter-Rename-Spectrum-2-sp.patch
 	patches.suse/mlxsw-Add-operations-structure-for-bloom-filter-calc.patch
 	patches.suse/mlxsw-spectrum_acl_bloom_filter-Add-support-for-Spec.patch
+	patches.suse/mlxsw-spectrum-Extend-to-support-Spectrum-4-ASIC.patch
 	patches.suse/net-tls-Fix-skb-memory-leak-when-running-kTLS-traffi.patch
 	patches.suse/net-mscc-ocelot-fix-incorrect-balancing-with-down-LA.patch
 	patches.suse/can-mcp251xfd-mcp251xfd_tef_obj_read-fix-typo-in-err.patch
