--- a/series.conf
+++ b/series.conf
@@ -8648,6 +8648,7 @@
 	patches.suse/net-dsa-felix-add-stream-gate-settings-for-psfp.patch
 	patches.suse/net-mscc-ocelot-use-index-to-set-vcap-policer.patch
 	patches.suse/net-dsa-felix-use-vcap-policer-to-set-flow-meter-for.patch
+	patches.suse/net-dsa-felix-restrict-psfp-rules-on-ingress-port.patch
 	patches.suse/mlxsw-constify-address-in-mlxsw_sp_port_dev_addr_set.patch
 	patches.suse/ipw2200-constify-address-in-ipw_send_adapter_address.patch
 	patches.suse/amd-lance-use-eth_hw_addr_set.patch
