--- a/series.conf
+++ b/series.conf
@@ -3357,6 +3357,7 @@
 	patches.suse/io_uring-fix-off-by-one-in-BUILD_BUG_ON-check-of-__R.patch
 	patches.suse/riscv-dts-microchip-mpfs-icicle-Fix-serial-console.patch
 	patches.suse/vDPA-ifcvf-introduce-get_dev_type-which-returns-virt.patch
+	patches.suse/vDPA-ifcvf-implement-management-netlink-framework-fo.patch
 	patches.suse/virtio-blk-remove-unneeded-likely-statements.patch
 	patches.suse/iova-Export-alloc_iova_fast-and-free_iova_fast.patch
 	patches.suse/cifs-update-FSCTL-definitions.patch
