--- a/series.conf
+++ b/series.conf
@@ -8890,6 +8890,7 @@
 	patches.suse/devlink-Add-new-event_eq_size-generic-device-param.patch
 	patches.suse/net-mlx5-Let-user-configure-event_eq_size-param-57ca7678.patch
 	patches.suse/net-mlx5-Let-user-configure-max_macs-generic-param.patch
+	patches.suse/net-mlx5-Remove-the-repeated-declaration.patch
 	patches.suse/mt76-mt7921-drop-offload_flags-overwritten.patch
 	patches.suse/mt76-mt7615-fix-possible-deadlock-while-mt7615_regis.patch
 	patches.suse/mt76-do-not-pass-the-received-frame-with-decryption-.patch
