mlxsw: Add operations structure for bloom filter calculation (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -9037,6 +9037,7 @@
 	patches.suse/mlxsw-spectrum_acl_bloom_filter-Reorder-functions-to.patch
 	patches.suse/mlxsw-spectrum_acl_bloom_filter-Make-mlxsw_sp_acl_bf.patch
 	patches.suse/mlxsw-spectrum_acl_bloom_filter-Rename-Spectrum-2-sp.patch
+	patches.suse/mlxsw-Add-operations-structure-for-bloom-filter-calc.patch
 	patches.suse/net-tls-Fix-skb-memory-leak-when-running-kTLS-traffi.patch
 	patches.suse/net-mscc-ocelot-fix-incorrect-balancing-with-down-LA.patch
 	patches.suse/can-mcp251xfd-mcp251xfd_tef_obj_read-fix-typo-in-err.patch
