iavf: remove redundant ret variable (jsc#PED-835).

--- a/series.conf
+++ b/series.conf
@@ -11511,6 +11511,7 @@
 	patches.suse/iavf-Add-support-for-50G-100G-in-AIM-algorithm.patch
 	patches.suse/iavf-refactor-processing-of-VLAN-V2-capability-messa.patch
 	patches.suse/iavf-Add-usage-of-new-virtchnl-format-to-set-default.patch
+	patches.suse/iavf-remove-redundant-ret-variable.patch
 	patches.suse/qed-display-VF-trust-config.patch
 	patches.suse/qed-validate-and-restrict-untrusted-VFs-vlan-promisc.patch
 	patches.suse/bpf-Add-config-to-allow-loading-modules-with-BTF-mis.patch
