net/mlx5e: Add recovery flow in case of error CQE (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -9053,6 +9053,7 @@
 	patches.suse/net-mlx5e-Move-HW-GRO-and-CQE-compression-check-to-f.patch
 	patches.suse/net-mlx5e-Refactor-set_pflag_cqe_based_moder.patch
 	patches.suse/net-mlx5e-TC-Remove-redundant-error-logging.patch
+	patches.suse/net-mlx5e-Add-recovery-flow-in-case-of-error-CQE.patch
 	patches.suse/net-tls-Fix-skb-memory-leak-when-running-kTLS-traffi.patch
 	patches.suse/net-mscc-ocelot-fix-incorrect-balancing-with-down-LA.patch
 	patches.suse/can-mcp251xfd-mcp251xfd_tef_obj_read-fix-typo-in-err.patch
