iavf: Fix adopting new combined setting (jsc#PED-835).

--- a/series.conf
+++ b/series.conf
@@ -10807,6 +10807,7 @@
 	patches.suse/net-dsa-mt7530-fix-incorrect-test-in-mt753x_phylink_.patch
 	patches.suse/ethernet-Fix-error-handling-in-xemaclite_of_probe.patch
 	patches.suse/iavf-Fix-handling-of-vlan-strip-virtual-channel-mess.patch
+	patches.suse/iavf-Fix-adopting-new-combined-setting.patch
 	patches.suse/i40e-stop-disabling-VFs-due-to-PF-error-responses.patch
 	patches.suse/ice-stop-disabling-VFs-due-to-PF-error-responses.patch
 	patches.suse/ice-Fix-error-with-handling-of-bonding-MTU.patch
