net/mlx5: Add ability to insert to specific flow group (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -11489,6 +11489,7 @@
 	patches.suse/net-flow_offload-add-tc-police-action-parameters.patch
 	patches.suse/flow_offload-reject-offload-for-all-drivers-with-inv.patch
 	patches.suse/mlx5-remove-unused-static-inlines.patch
+	patches.suse/net-mlx5-Add-ability-to-insert-to-specific-flow-grou.patch
 	patches.suse/sfc-default-config-to-1-channel-core-in-local-NUMA-n.patch
 	patches.suse/sfc-set-affinity-hints-in-local-NUMA-node-only.patch
 	patches.suse/tuntap-add-sanity-checks-about-msg_controllen-in-sen.patch
