net/mlx5e: E-Switch, Add PTP counters for uplink representor (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -11463,6 +11463,7 @@
 	patches.suse/net-mlx5e-Generalize-packet-merge-error-message.patch
 	patches.suse/net-mlx5e-Default-to-Striding-RQ-when-not-conflictin.patch
 	patches.suse/net-mlx5e-RX-Restrict-bulk-size-for-small-Striding-R.patch
+	patches.suse/net-mlx5e-E-Switch-Add-PTP-counters-for-uplink-repre.patch
 	patches.suse/selftests-mptcp-add-csum-mib-check-for-mptcp_connect.patch
 	patches.suse/net-ibmvnic-Cleanup-workaround-doing-an-EOI-after-pa.patch
 	patches.suse/ionic-catch-transition-back-to-RUNNING-with-fw_gener.patch
