vhost-vdpa: Handle the failure of vdpa_reset() (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -3372,6 +3372,7 @@
 	patches.suse/file-Export-receive_fd-to-modules.patch
 	patches.suse/vdpa-Fix-some-coding-style-issues.patch
 	patches.suse/vdpa-Add-reset-callback-in-vdpa_config_ops.patch
+	patches.suse/vhost-vdpa-Handle-the-failure-of-vdpa_reset.patch
 	patches.suse/cifs-update-FSCTL-definitions.patch
 	patches.suse/cifs-rename-cifs_common-to-smbfs_common.patch
 	patches.suse/cifs-move-SMB-FSCTL-definitions-to-common-code.patch
