cls_flower: Fix inability to match GRE/IPIP packets (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -6070,6 +6070,7 @@
 	patches.suse/net-phylink-avoid-mvneta-warning-when-setting-pause-.patch
 	patches.suse/net-bridge-fix-uninitialized-variables-when-BRIDGE_C.patch
 	patches.suse/selftests-net-bridge-update-IGMP-MLD-membership-inte.patch
+	patches.suse/cls_flower-Fix-inability-to-match-GRE-IPIP-packets.patch
 	patches.suse/udp6-allow-SO_MARK-ctrl-msg-to-affect-routing.patch
 	patches.suse/ibmvnic-don-t-stop-queue-in-xmit.patch
 	patches.suse/ibmvnic-Process-crqs-after-enabling-interrupts.patch
