net/mlx5: DR, Add support for dumping steering info (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -8996,6 +8996,7 @@
 	patches.suse/net-mlx5-DR-Rename-list-field-in-matcher-struct-to-l.patch
 	patches.suse/net-mlx5-DR-Add-check-for-flex-parser-ID-value.patch
 	patches.suse/net-mlx5-DR-Add-missing-reserved-fields-to-dr_match_.patch
+	patches.suse/net-mlx5-DR-Add-support-for-dumping-steering-info.patch
 	patches.suse/bpf-Do-not-WARN-in-bpf_warn_invalid_xdp_action.patch
 	patches.suse/bpf-Let-bpf_warn_invalid_xdp_action-report-more-info.patch
 	patches.suse/bpf-Introduce-composable-reg-ret-and-arg-types.patch
